Fix title alignment issues

--- a/code/app/static/styles/home.css
+++ b/code/app/static/styles/home.css
@@ -1,7 +1,6 @@
 body {
 	background-color:white;
 	font-family:Arial, Helvetica, sans-serif;
-	text-align:center;
 }
 
 
@@ -40,15 +39,24 @@ input {
 	max-width:500px;
 }
 
+.topbar {
+	width:100%;
+	display:block;
+	text-align:center;
+
+}
+
+
 .title {
 	position:absolute;
-	left:10px;
-	top:10px;
+	z-index:100;
 	font-style:italic;
+	padding:0;
+	margin:0;
 }
 
 .topbar a {
-	margin:10px;
+	/*margin-right:10px;*/
 	color: blue;
 }
 .topbar a:link, a:visited, a:active {
@@ -63,7 +71,7 @@ input {
 	max-width:800px;
 	margin:10px;
 	width:90%;
-	display:inline-block;
+	display:block;
 	text-align:left;
 }
 .orderform {
